gcc/testsuite/gdc.test/fail_compilation/fail6497.d

void main() @safe
{
    int n;
    auto b = &(0 ? n : n);
}
